workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__bottom.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(0.0, 7.5), None)"
---
Location {
    key: (
        0,
        7,
    ),
    point: Point(
        0.0,
        7.5,
    ),
    distance: 7.5,
    radians: 3.141592653589793,
}
