workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__bottom_left.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(-7.5, 7.5), None)"
---
Location {
    key: (
        -8,
        7,
    ),
    point: Point(
        -7.5,
        7.5,
    ),
    distance: 10.606601717798213,
    radians: 3.9269908169872414,
}
