workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__bottom_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(0.0, 8.0), None)"
---
Location {
    key: (
        0,
        8,
    ),
    point: Point(
        0.0,
        8.0,
    ),
    distance: 8.0,
    radians: 3.141592653589793,
}
