workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__center.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(0.0, 0.0), None)"
---
Location {
    key: (
        0,
        0,
    ),
    point: Point(
        0.0,
        0.0,
    ),
    distance: 0.0,
    radians: 0.0,
}
