workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__left.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(-7.5, 0.0), None)"
---
Location {
    key: (
        -8,
        0,
    ),
    point: Point(
        -7.5,
        0.0,
    ),
    distance: 7.5,
    radians: 4.71238898038469,
}
