workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__left_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(-8.1, 0.0), None)"
---
Location {
    key: (
        -9,
        0,
    ),
    point: Point(
        -8.1,
        0.0,
    ),
    distance: 8.1,
    radians: 4.71238898038469,
}
