workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__order_distance.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "get_sorted_location_ids(vec![(\"center\",\nLocation::new(1.0, Point(0.0, 0.0), None)),\n(\"top-right\", Location::new(1.0, Point(7.5, -7.5), None)),\n(\"top\", Location::new(1.0, Point(0.0, -7.5), None)),])"
---
[
    "top",
    "center",
    "top-right",
]
