workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__right.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(7.5, 0.0), None)"
---
Location {
    key: (
        7,
        0,
    ),
    point: Point(
        7.5,
        0.0,
    ),
    distance: 7.5,
    radians: 1.5707963267948966,
}
