workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__right_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(8.0, 0.0), None)"
---
Location {
    key: (
        8,
        0,
    ),
    point: Point(
        8.0,
        0.0,
    ),
    distance: 8.0,
    radians: 1.5707963267948966,
}
