workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__snap_x_just_under.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(7.0 - TOLERANCE * 0.5, 7.0), None)"
---
Location {
    key: (
        7,
        7,
    ),
    point: Point(
        6.9999237,
        7.0,
    ),
    contained: true,
    distance: 9.899441,
    radians: 2.3562,
}
